--- a/styles/style.css
+++ b/styles/style.css
@@ -3,18 +3,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Inria Sans', sans-serif;
 }
 
 body {
     background-color: #f8f8f8;
-}
-
-* {
-    font-family: 'Inria Sans', sans-serif;
-}
-
-p{
-    color: white;
 }
 
 /************************************************ Header */
@@ -22,6 +15,7 @@ header{
     text-align: center;
     background-color: white;
     margin: 0;
+    color: white;
 }
 
 header img{
@@ -35,11 +29,10 @@ header p{
     padding: 0.3rem 0rem;
 }
 
-/************************************************ Main */
-
 .portada{
     width: 100%;
-    height: auto;
+    height: 425px;
+    margin: 0;
 }
 
 .navbar1, .navbar2{
@@ -72,20 +65,26 @@ header p{
     }
 }
 
-.home, .search, .login, .favorite, .cart{
+.home, .home2, .search, .login, .favorite, .cart{
     display: flex;
+}
+
+.home{
+    margin-right: 15rem;
 }
 
 .favorite img{
     width: 30px;
-    height: 42;
+    height: 42px;
 }
 
 .search input{
     margin-top: 0.1rem;
-    margin-left: 25rem;
+    margin-left: 1rem;
     width: 500px;
     height: 35px;
+    border-radius: 0.8rem;
+    border: none;
 }
 
 .search img{
@@ -103,9 +102,204 @@ header p{
     }
 }
 
+/************************************************ Main */
+
 h1{
+    color: #5271FF;
     text-align: center;
-    padding-top: 4rem;
+    padding: 2rem 0rem 3rem 0rem;
+    font-size: 3rem;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 400px;
+    background-color: white;
+    border-radius: 1rem;
+    box-shadow: 2px 2px 20px black;
+    img{
+        max-width: 400px;
+        height: 200px;
+        border-top-left-radius: 1rem;
+        border-top-right-radius: 1rem;
+    }
+    h2, h3, button{
+        margin-bottom: 0.5rem;
+    }
+}
+
+.btn-comp{
+    background-color: #5271FF;
+    color: white;
+    padding: 0.5rem 1rem;
+    border-radius: 0.35rem;
+    border: none;
+    font-size: 1rem;
+}
+
+.btn-fav{
+    background-color: #5271FF;
+    color: white;
+    padding: 0.5rem 0.65rem;
+    border-radius: 1rem;
+    border: none;
+    font-size: 1rem;
+}
+
+.prod{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    row-gap: 10rem;
+    column-gap: 10.8rem;
+}
+
+.first-div-login{
+    text-align: center;
+    h1{
+        padding-bottom: 1rem;
+    }
+    a{
+        display: inline-block;
+        margin-bottom: 2rem;
+        text-decoration: none;
+        color: black;
+    }
+}
+
+.login-register{
+    display: flex;
+    width: 700px;
+    height: 456px;
+    padding: 1rem 0rem;
+    margin-left: 38rem;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background-color: white;
+    border-radius: 2rem;
+    box-shadow: -2px 2px 20px rgb(53, 53, 53);
+    h2{
+        margin-bottom: 1rem;
+    }
+    hr{
+        height: 100%;
+        border: 1px solid gray;
+    }
+    input{
+        width: 250px;
+        height: 35px;
+        border-radius: 0.5rem;
+        margin-bottom: 1rem;
+        border: 1px solid gray;
+    }
+    p{
+        margin-bottom: 1rem;
+    }
+}
+
+.btn-login-register{
+    background-color: #5271FF;
+    color: white;
+    padding: 0.70rem 4.75rem;
+    border-radius: 1rem;
+    border: none;
+    font-size: 1rem;
+}
+
+.y{
+    margin-right: 5rem;
+}
+
+.n{
+margin-left: 5rem;
+}
+
+.btn-log-reg, .btn-comprar{
+    background-color: #5271FF;
+    color: white;
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+    border: none;
+    font-size: 1rem;
+}
+
+.btn-comp, .btn-fav, .btn-log-reg, .btn-login, .btn-login-register, .btn-comprar{
+    &:hover{
+        cursor: pointer;
+        background-color: #375cff;
+        transition: 250ms;
+    }
+}
+
+.carrito {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.tabla{
+    display: flex;
+    justify-content: center;
+}
+
+.ord{
+    width: 75px;
+}
+
+.prod-name{
+    width: 400px;
+}
+
+.precio {
+    width: 100px;
+}
+
+.ord, .prod-name, .precio{
+    margin-bottom: 0.5rem;
+}
+
+.total{
+    text-align: center;
+}
+
+.envio, .pago {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    input{
+        width: 250px;
+        height: 35px;
+        border-radius: 0.5rem;
+        margin-bottom: 1rem;
+        border: 1px solid gray;
+    }
+}
+
+.envio {
+    h4 {
+        margin: 1rem 0rem 0.5rem 0rem;
+    }
+}
+
+.pago {
+    h4 {
+        margin: 1rem 0rem 0.5rem 0rem;
+    }
+
+}
+
+.btn-comprar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 /************************************************ Footer */
