Agregado de archivo json para los productos junto con la implementación de fetch y otros cambios esteticos

--- a/styles/style.css
+++ b/styles/style.css
@@ -162,6 +162,13 @@ h1{
     column-gap: 10.8rem;
 }
 
+.back {
+    font-size: 1.25rem;
+    &:hover {
+        text-decoration: underline;
+    }
+}
+
 .first-div-login{
     text-align: center;
     h1{
